# Chess-engine

./: .gitignore  CMakeLists.txt  Chess.sln  Chess.vcxproj  Chess.vcxproj.filters
src/: AllPlayers.h  Main.cpp  Platform.h
src/Engine/: ChessConstants.h  ChessEngine.cpp  ChessEngine.h  Defines.h  Magic.cpp  Magic.h  Move.h  Tables.h  Test.cpp  Test.h
src/Players/: Console.cpp  Console.h  Generous.cpp  Generous.h  Huddle.cpp  Huddle.h  MinOpptMoves.cpp  MinOpptMoves.h  Negamax.cpp  Negamax.h  OppositeColor.cpp  OppositeColor.h  Pacifist.cpp  Pacifist.h  Player.h  Random.cpp  Random.h  SameColor.cpp  SameColor.h  Swarm.cpp  Swarm.h
